--- a/dmc/compose/.env
+++ b/dmc/compose/.env
@@ -24,3 +24,4 @@ SUB_DOMAIN_SONARR=sonarr
 SUB_DOMAIN_RADARR=radarr
 SUB_DOMAIN_PROWLARR=prowlarr
 SUB_DOMAIN_JELLYSEERR=jellyseerr
+SUB_DOMAIN_WIZARR=wizarr
