--- a/dmc/compose/docker-compose.yml
+++ b/dmc/compose/docker-compose.yml
@@ -31,8 +31,8 @@ services:
       - "traefik.http.routers.dmc-jellyfin.tls.certresolver=letsencrypt"
       - "traefik.docker.network=global"
 
-  transmission:
-    image: lscr.io/linuxserver/transmission:latest
+  qbittorrent:
+    image: lscr.io/linuxserver/qbittorrent:latest
     restart: unless-stopped
     networks:
       - global
@@ -40,23 +40,25 @@ services:
     environment:
       - PUID=${ENV_PUID}
       - PGID=${ENV_PGID}
-      - TZ={TIMEZONE}
+      - TZ=${TIMEZONE}
+      - WEBUI_PORT=8080
     volumes:
-      - ${SERVICES_DIR}/transmission:/config
+      - ${SERVICES_DIR}/qbittorrent:/config
       - ${DATA_DIR}/downloads:/downloads
     ports:
-      - 51413:51413 # Torrent port TCP
-      - 51413:51413/udp # Torrent port UDP
+      - 8080:8080 # Web UI port
+      - 6881:6881 # Torrent port TCP
+      - 6881:6881/udp # Torrent port UDP
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.dmc-transmission.rule=Host(`${SUB_DOMAIN_TRANSMISSION}.${DOMAIN}`)"
-      - "traefik.http.routers.dmc-transmission.tls=true"
-      - "traefik.http.services.dmc-transmission.loadbalancer.server.port=9091"
-      - "traefik.http.routers.dmc-transmission.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.dmc-qbittorrent.rule=Host(`${SUB_DOMAIN_QBITTORRENT}.${DOMAIN}`)"
+      - "traefik.http.routers.dmc-qbittorrent.tls=true"
+      - "traefik.http.services.dmc-qbittorrent.loadbalancer.server.port=8080"
+      - "traefik.http.routers.dmc-qbittorrent.tls.certresolver=letsencrypt"
       - "traefik.docker.network=global"
       # Basic auth
       - "traefik.http.middlewares.dmc-auth.basicauth.usersfile=/.htpasswd"
-      - "traefik.http.routers.dmc-transmission.middlewares=dmc-auth"
+      - "traefik.http.routers.dmc-qbittorrent.middlewares=dmc-auth"
 
   radarr:
     image: lscr.io/linuxserver/radarr:latest
